<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name"/>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@android:color/white"
                      android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/device_state"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/device_state_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/device_default_state"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/start_stereo_to_mono_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/stereo_to_mono"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/start_resample_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/resample"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/start_recode_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/start_recode"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/stop_recode_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/stop_recode"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/start_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/start_update"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mic_gian_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="left"
                        android:maxLines="1"
                        android:text="@string/mic_gian"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <SeekBar
                        android:id="@+id/mic_gain_sb"
                        style="@style/seek_bar_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:max="100"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:progressDrawable="@drawable/seek_bar_drawable" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/monitor_volume_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="left"
                        android:maxLines="1"
                        android:text="@string/monitor_volume"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <SeekBar
                        android:id="@+id/monitor_value_sb"
                        style="@style/seek_bar_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:max="100"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:progressDrawable="@drawable/seek_bar_drawable" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/revb_ratio_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="left"
                        android:maxLines="1"
                        android:text="@string/revb_ratio_value"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <SeekBar
                        android:id="@+id/revb_ratio_sb"
                        style="@style/seek_bar_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:max="100"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:progressDrawable="@drawable/seek_bar_drawable" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/music_mixer_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/music_mixer_value"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ToggleButton
                        android:id="@+id/music_mixer_tb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="1dp"
                        android:background="@android:color/transparent"
                        android:button="@drawable/toggle_btn"
                        android:checked="false"
                        android:text=""
                        android:textColor="@color/black"
                        android:textOff="off"
                        android:textOn="on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agc_value"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ToggleButton
                        android:id="@+id/agc_tb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="1dp"
                        android:background="@android:color/transparent"
                        android:button="@drawable/toggle_btn"
                        android:checked="false"
                        android:text=""
                        android:textColor="@color/white"
                        android:textOff="off"
                        android:textOn="on" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans_value"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/ans_reduce_bt"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:text="-"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/ans_value_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/ans_plus_bt"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:text="+"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_devocal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="left"
                        android:maxLines="1"
                        android:text="@string/devocal"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_auto_click"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#ffffff"
                        android:text="@string/click" />

                    <CheckBox
                        android:id="@+id/btn_devocal_on_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#ffffff"
                        android:text="@string/voiceOfPeople" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/devocal_mode_tz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mode"
                        android:textColor="@color/black" />

                    <RadioGroup
                        android:id="@+id/devocal_mode_rg"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        >
                        <RadioButton
                            android:id="@+id/devocal_mode_rb0"
                            android:text="默认"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:checked="true"
                            />
                        <RadioButton
                            android:id="@+id/devocal_mode_rb1"
                            android:text="干音"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:checked="false"
                            />
                        <RadioButton
                            android:id="@+id/devocal_mode_rb2"
                            android:text="跟唱"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:checked="false"
                            />
                        <RadioButton
                            android:id="@+id/devocal_mode_rb3"
                            android:text="清唱"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:checked="false"
                            />
                    </RadioGroup>

                </LinearLayout>


            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/undata_text"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>